[metadata]
url = https://github.com/SciTools-incubator/iris-agg-regrid
author = Met Office
author_email = scitools-iris-dev@googlegroups.com
license = LGPLv3+
license_file = COPYING.LESSER
description = file: description.txt
keywords = regrid
classifiers = 
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: C++
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS

[options]
packages = find:
zip_safe = False
